<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="settings">Settings</string>
  <string name="add_product">Add product</string>
  <string name="error_wear_app_not_installed">The Android Wear app is not installed</string>
  <string name="error_google_api_client_connect_failed">Connection to Google API client has failed</string>
  <string name="search">Search</string>
  <string name="todo">To buy</string>
  <string name="done">Done</string>
  <string name="delete">Delete</string>
  <string name="delete_product">Delete product</string>
  <string name="delete_confirm">Do you really want to delete \'%1s\'?</string>
  <string name="what_do_you_want_to_buy">What do you want to buy…</string>
  <string name="no_products_found">No products found</string>
  <string name="clear_shopping_list">Clear shopping list</string>
  <string name="clear_shopping_list_confirm">Move all products from the todo list to the done list and clear the
    shopping cart on your wearable?
  </string>
  <string name="edit">Edit</string>
  <string name="edit_product">Edit product</string>
  <string name="name">Name</string>
  <string name="save">Save</string>
  <string name="cancel">Cancel</string>
  <string name="draw_card_animations">Draw card animations</string>
  <string name="draw_card_animations_summary">Draw ripple effects and animations on the product cards</string>
  <string name="single_line_cards">Single line card titles</string>
  <string name="single_line_cards_summary">Show only one line of text on the product cards</string>
  <string name="export_data">Export data</string>
  <string name="import_data">Import data</string>
  <string name="import_data_confirm">Delete the current data and reload it from the data file \'buyright.json\'?
  </string>
  <string name="export_data_confirm">Export the current data to the data file \'buyright.json\'?</string>
  <string name="export_data_successful">Data was successfully exported</string>
  <string name="import_data_successful">Data was successfully imported</string>
</resources>
