<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">

  <TextView
      android:text="@string/name"
      android:labelFor="@id/name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <EditText
      android:id="@+id/name"
      android:inputType="text"
      android:imeOptions="actionDone"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:background="@color/primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.gc.materialdesign.views.ButtonFlat
        android:id="@+id/save"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

  </LinearLayout>

</LinearLayout>