<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsMainFragment">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/secondary_text"
        android:text="@string/todo"/>

    <View
        android:id="@+id/todo_separator"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/separator_thickness"
        android:background="@color/divider"/>

    <net.grappendorf.buyright.NonScrollingGridView
        android:id="@+id/todo_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:columnWidth="120dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:stretchMode="columnWidth"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/no_todo_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="16sp"
          android:text="@string/nothing_to_do"
          android:textColor="@color/secondary_text"/>

      <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingStart="4sp"
          android:paddingEnd="4sp"
          android:src="@drawable/ic_tag_faces_black_24dp"
          android:tint="@color/secondary_text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/done_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textColor="@color/secondary_text"
        android:text="@string/done"/>

    <View
        android:id="@+id/done_separator"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/separator_thickness"
        android:background="@color/divider"/>

    <net.grappendorf.buyright.NonScrollingGridView
        android:id="@+id/done_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:columnWidth="120dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="0dp"
        android:horizontalSpacing="0dp"
        android:stretchMode="columnWidth"
        android:gravity="center"/>

    <TextView
        android:id="@+id/no_done_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/no_products_found"
        android:textColor="@color/secondary_text"/>

  </LinearLayout>

</ScrollView>